--- a/D-TECT/src/main/resources/templates/user/user_mypage.html
+++ b/D-TECT/src/main/resources/templates/user/user_mypage.html
@@ -84,7 +84,7 @@
 
     <section class="cta-wrap">
         <button type="button" class="btn btn--accent" id="historyBtn">내 분석 내역</button>
-        <button type="button" class="btn btn--accent" id="reserveBtn">상담 일정 예약하기</button>
+        <button type="button" class="btn btn--accent" id="reserveBtn">전문가와 상담하기</button>
         <button type="button" class="btn btn--accent btn--danger" id="withdrawBtn">회원탈퇴</button>
     </section>
 </main>
